[package]
name = "terrain_generator_2d"
version = "0.1.0"
authors = ["Mapet <jakubsordyl1@gmail.com>"]
edition = "2018"

[dependencies]
piston = "0.51.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.65.0"
piston2d-opengl_graphics = "0.72.0"
opensimplex_noise_rs = "0.1.0"
rand = "0.7.3"
image = "0.23.8"